--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "kristoffer@sanity.io",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt && open localhost:3000",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
