--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "ecommerce-frontend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Sanity frontend example for E-commerce in Vue.js",
-  "author": "kristoffer@sanity.io",
-  "private": true,
+  "author": "contact@jaimevelas.co",
   "scripts": {
     "dev": "nuxt && open localhost:3000",
     "build": "nuxt build",
@@ -14,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/vuetify": "^0.4.3",
     "@sanity/block-content-to-html": "^1.3.5",
     "@sanity/client": "^0.128.3",
     "@sanity/image-url": "^0.128.12",
